kubernetes/mad-cow-config/mad-cow-config-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mad-cow-config-service
spec:
  ports:
  - port: 10001
    targetPort: 10001
    name: service
  - port: 10002
    targetPort: 10002
    name: management
  selector:
    app: mad-cow-config-service
  type: NodePort
